<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bdoku_round_layout"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/boardChooserText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/bdoku_faded_blue"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/difficultyChooserPrompt"
        android:textColor="@color/majorBoardGridLinesColor"
        android:textSize="30sp" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/boardChooserText"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bdoku_btn"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/easy_button_label"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/easyButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bdoku_btn"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/medium_button_label"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/hardButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mediumButton"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bdoku_btn"
        android:fontFamily="@font/alfa_slab_one"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/hard_button_label"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>